# Matrix-inversion-OpenCL-OpenACC

./: CMakeLists.txt  README.md  VectorAdd.cpp  cmake-build-debugCOPYONLY
openACC/: CMakeLists.txt  Dockerfile  compile.sh  main.cpp
openCL/: CMakeLists.txt  VectorAdd.cl  VectorAdd.cpp  inversion.cpp  main.cpp
tp4_openacc/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  main.cpp  openacc.sh
tp4_opencl/: CMakeLists.txt  inversion.cpp  main.cpp
